# segmento-url-shortener

./: Cargo.toml  Dockerfile  Makefile  README.md  publish.sh
.github/workflows/: release.yml
crates/api/: Cargo.toml
crates/api/src/: handlers.rs  main.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  validation.rs
crates/database/: Cargo.toml
crates/database/migrations/2026-01-07-090432-0000_create_links/: up.sql
crates/database/src/: lib.rs  link_repo.rs  models.rs  pool.rs  schema.rs
crates/services/: Cargo.toml
crates/services/src/: link_service.rs
