[package]
name = "api"
version = "0.1.0"
edition.workspace = true

[dependencies]
dotenvy.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

axum = { version = "0.8.7" }

database = { path = "../database" }
services = { path = "../services" }
common = { path = "../common" }
